# pybinding-study

./: .gitignore  ADVANCED.md  BUILD.md  CMakeLists.txt  INDEX.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py
examples/: example_usage.py
include/: calculator.h
python/: bindings.cpp
src/: calculator.cpp
tests/: test_calculator.py
